--- a/tensorflow/compiler/tests/BUILD
+++ b/tensorflow/compiler/tests/BUILD
@@ -815,7 +815,7 @@ tf_xla_py_test(
 
 tf_xla_py_test(
     name = "scan_ops_test",
-    size = "small",
+    size = "medium",
     srcs = ["scan_ops_test.py"],
     tags = ["optonly"],
     deps = [
@@ -967,8 +967,9 @@ tf_xla_py_test(
 
 tf_xla_py_test(
     name = "unary_ops_test",
-    size = "medium",
+    size = "large",
     srcs = ["unary_ops_test.py"],
+    shard_count = 3,
     deps = [
         ":xla_test",
         "//tensorflow/python:array_ops",
@@ -1001,7 +1002,7 @@ tf_xla_py_test(
 
 tf_xla_py_test(
     name = "variable_ops_test",
-    size = "small",
+    size = "medium",
     srcs = ["variable_ops_test.py"],
     tags = ["optonly"],
     deps = [
