WIP: adds TF1.14-compatible deterministic bias_add solution and TF_DETERMINISTIC_OPS

--- a/tensorflow/python/kernel_tests/BUILD
+++ b/tensorflow/python/kernel_tests/BUILD
@@ -1640,6 +1640,16 @@ cuda_py_test(
 )
 
 cuda_py_test(
+    name = "bias_op_deterministic_test",
+    size = "medium",
+    srcs = ["bias_op_deterministic_test.py"],
+    additional_deps = [
+        "//tensorflow/python/kernel_tests:bias_op_test",
+    ],
+    xla_enable_strict_auto_jit = True,
+)
+
+cuda_py_test(
     name = "bias_op_test",
     size = "medium",
     srcs = ["bias_op_test.py"],
