WIP: adds TF1.14-compatible deterministic bias_add solution and TF_DETERMINISTIC_OPS
Clean up and prepare for release.

Fixed some unit test sizes

--- a/tensorflow/python/kernel_tests/BUILD
+++ b/tensorflow/python/kernel_tests/BUILD
@@ -1640,8 +1640,18 @@ cuda_py_test(
 )
 
 cuda_py_test(
+    name = "bias_op_deterministic_test",
+    size = "small",
+    srcs = ["bias_op_deterministic_test.py"],
+    additional_deps = [
+        "//tensorflow/python/kernel_tests:bias_op_test",
+    ],
+    xla_enable_strict_auto_jit = True,
+)
+
+cuda_py_test(
     name = "bias_op_test",
-    size = "medium",
+    size = "small",
     srcs = ["bias_op_test.py"],
     additional_deps = [
         "//third_party/py/numpy",
